# chatbot-Victor-Paulo

./: .gitignore  Gerador de skill.ipynb  Perguntas.xlsx  Questions&Answers_BLAB (1).xlsx  README.md  Sentence Transformers.ipynb  choose_questions.py  extract_questions.py  filtered_qna.json  filtered_qna_0.json  filtered_qna_1200.json  filtered_qna_manual.json  filtered_qna_manual_sorted.csv  fix_lookup.py  main.py  pyproject.toml  refilter.py  utils.py
.ipynb_checkpoints/: Sentence Transformers-checkpoint.ipynb
results/: Perguntas.xlsx  filtered_qna.json  lookup_table.json  lookup_table_fixed.json  skill-Amazônia-Azul.json  skill-Amazônia-Azul2.json
results/amazonia azul primeira versão/: Perguntas-antigo.xlsx  skill-Amazônia-Azul.json
src/: __init__.py  generate_skill.py
src/dialog_nodes/: Folder.py  Node.py  NodeOrganizer.py  dialog_node_operations.py  get_title.py
src/entities/: entity_operations.py
src/intents/: intent_operations.py
src/io/: file_operations.py
src/skills/: skill_operations.py
src/utils/: __init__.py  list_dict_operations.py  plural.py  sanitize.py
tests/: __init__.py  collisions.py  unit.py
