[tool.poetry]
name = "blab-filter-msmarco"
version = "0.1.0"
description = ""
authors = ["Gabriel Okamoto"]
readme = "README.md"
packages = [{include = "blab_filter_msmarco"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
openpyxl = "^3.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
